--- a/recorder.yaml
+++ b/recorder.yaml
@@ -1,5 +1,5 @@
   purge_keep_days: 5
-  db_url: !secret recorder_db_url
+  db_url:  home-assistant_v2 recorder_db_url
   exclude:
     domains:
       - sun
